Fix #7967 - menus overlap (stacking issues) (#7968)
* Fix #7964 - button overlap fix

`z-index:100` created an issue on topMenu.
And the problem for zooming was not coming from this.

* Fix #7964 - menu overlap

`z-index: 1` was causing issues on menus.

--- a/src/sass/commons/pm-button.scss
+++ b/src/sass/commons/pm-button.scss
@@ -256,7 +256,7 @@
         cursor: pointer;
         transition: all .3s ease-out;
         -webkit-tap-highlight-color: transparent;
-        z-index: 1;
+        /* no z-index here, otherwise, menus will fail */
         box-shadow: 0 1px 2px 0 rgba(0,0,0,0.1);
         background: $button-background;
 
